# api/handler/identity.go
@@ -25,7 +25,7 @@ func RegisterIdentityRoutes(router *gin.RouterGroup) {
 
 // @Summary     Is user/group ownership of config files set to keystone?
 // @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
-// @Tags        identity
+// @Tags        Identity
 // @Produce     json
 // @Success     200 {array}  checklist.CheckResult
 // @Router      /check/identity-01 [get]
@@ -64,7 +64,7 @@ func handleIdentity01(c *gin.Context) {
 
 // @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/keystone.conf)
 // @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
-// @Tags        identity
+// @Tags        Identity
 // @Produce     json
 // @Success     200 {object} checklist.CheckResult
 // @Router      /check/identity-01-01 [get]
@@ -84,9 +84,9 @@ func checkIdentity0101(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
-// @Summary     Run Identity-01-02 (/etc/keystone/keystone-paste.ini)
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/keystone-paste.ini)
 // @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
-// @Tags        identity
+// @Tags        Identity
 // @Produce     json
 // @Success     200 {object} checklist.CheckResult
 // @Router      /check/identity-01-02 [get]
@@ -106,6 +106,12 @@ func checkIdentity0102(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/policy.json)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-03 [get]
 func checkIdentity0103(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
@@ -122,6 +128,12 @@ func checkIdentity0103(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/logging.conf)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-04 [get]
 func checkIdentity0104(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
@@ -138,6 +150,12 @@ func checkIdentity0104(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/ssl/certs/signing_cert.pem)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-05 [get]
 func checkIdentity0105(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
@@ -154,6 +172,12 @@ func checkIdentity0105(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/ssl/private/signing_key.pem)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-06 [get]
 func checkIdentity0106(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
@@ -170,6 +194,12 @@ func checkIdentity0106(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone/ssl/certs/ca.pem)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-07 [get]
 func checkIdentity0107(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
@@ -186,6 +216,12 @@ func checkIdentity0107(c *gin.Context) {
 	c.JSON(http.StatusOK, result)
 }
 
+// @Summary     Is user/group ownership of config files set to keystone? (/etc/keystone)
+// @Description Configuration files contain critical parameters and information required for smooth functioning of the component. If an unprivileged user, either intentionally or accidentally modifies or deletes any of the parameters or the file itself then it would cause severe availability issues causing a denial of service to the other end users. Thus user and group ownership of such critical configuration files must be set to that component owner. Additionally, the containing directory should have the same ownership to ensure that new files are owned correctly.
+// @Tags        Identity
+// @Produce     json
+// @Success     200 {object} checklist.CheckResult
+// @Router      /check/identity-01-08 [get]
 func checkIdentity0108(c *gin.Context) {
 	client, err := util.GetSSHClient()
 	if err != nil {
